Committer: nico <nico@PC.NICO> 	modified:   README.asciidoc 	renamed:    tools/bash_completion/arkmanager -> tools/bash_completion/dnlmanager 	renamed:    tools/arkmanager -> tools/dnlmanager 	renamed:    tools/arkmanager.cfg -> tools/dnlmanager.cfg 	modified:   tools/install.sh 	modified:   tools/instance.cfg.example 	renamed:    tools/lsb/arkdaemon -> tools/lsb/dnldaemon 	modified:   tools/migrate-config.sh 	modified:   tools/migrate-main-instance.sh 	renamed:    tools/openrc/arkdaemon -> tools/openrc/dnldaemon 	renamed:    tools/redhat/arkdaemon -> tools/redhat/dnldaemon 	deleted:    tools/systemd/arkmanager.service 	deleted:    tools/systemd/arkmanager@.service 	renamed:    tools/systemd/arkmanager.init -> tools/systemd/dnlmanager.init 	new file:   tools/systemd/dnlmanager.service 	new file:   tools/systemd/dnlmanager@.service 	modified:   tools/uninstall-user.sh 	modified:   tools/uninstall.sh 	renamed:    tools/upstart/arkmanager-instance.conf -> tools/upstart/dnlmanager-instance.conf 	renamed:    tools/upstart/arkmanager.conf -> tools/upstart/dnlmanager.conf

--- a/tools/upstart/dnlmanager-instance.conf
+++ b/tools/upstart/dnlmanager-instance.conf
@@ -1,9 +1,9 @@
-description "ARK Server Tools service"
+description "dnl Server Tools service"
 
 instance $service
 
 setuid steam
 
-env DAEMON="/usr/bin/arkmanager"
+env DAEMON="/usr/bin/dnlmanager"
 
 exec "$DAEMON" useconfig $service start --no-background
