--- a/tools/upstart/dnlmanager.conf
+++ b/tools/upstart/dnlmanager.conf
@@ -1,10 +1,10 @@
 start on runlevel [345]
 stop on runlevel [!345]
 
-env DAEMON="/usr/bin/arkmanager"
+env DAEMON="/usr/bin/dnlmanager"
 
 script
   for service in $(${DAEMON} list-instances --brief); do
-    start arkmanager-instance service=${service}
+    start dnlmanager-instance service=${service}
   done
 end script
